Add Render-compatible configuration and build script

--- a/config/database.yml
+++ b/config/database.yml
@@ -15,11 +15,8 @@ production:
   adapter: postgresql
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  <% if ENV['DATABASE_URL'] %>
-  url: <%= ENV['DATABASE_URL'] %>
-  <% else %>
-  database: my_diary_app_production
-  host: localhost
-  username: postgres
-  password: ""
-  <% end %>
+  database: <%= ENV.fetch("PGDATABASE", "my_diary_app_production") %>
+  username: <%= ENV.fetch("PGUSER", "postgres") %>
+  password: <%= ENV.fetch("PGPASSWORD", "") %>
+  host: <%= ENV.fetch("PGHOST", "localhost") %>
+  port: <%= ENV.fetch("PGPORT", "5432") %>
