feat: Complete image gallery implementation with Bulma CSS
- Added working image gallery with thumbnails and modal views
- Fixed Active Storage configuration for Windows compatibility
- Added image_processing gem with mini_magick processor
- Implemented beautiful Bulma CSS styling for responsive gallery
- Added Font Awesome icons for enhanced UI
- Updated database configuration for PostgreSQL
- Enhanced rich text editor functionality
- Added modal JavaScript for full-size image viewing

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,21 +1,25 @@
 default: &default
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
-
-development:
-  <<: *default
-  database: storage/development.sqlite3
-
-test:
-  <<: *default
-  database: storage/test.sqlite3
-
-production:
   adapter: postgresql
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  database: <%= ENV.fetch("PGDATABASE", "my_diary_app_production") %>
+  host: 127.0.0.1
+  port: 5432
+
+development:
+  <<: *default
+  database: my_diary_development
+  username: postgres
+  password: peter284
+
+test:
+  <<: *default
+  database: my_diary_test
+  username: postgres
+  password: peter284
+
+production:
+  <<: *default
+  database: <%= ENV.fetch("PGDATABASE", "my_diary_production") %>
   username: <%= ENV.fetch("PGUSER", "postgres") %>
   password: <%= ENV.fetch("PGPASSWORD", "") %>
   host: <%= ENV.fetch("PGHOST", "localhost") %>
