Fix image processing: Add Fly.io volume for persistent storage
- Add persistent volume mount configuration to fly.toml
- Update Dockerfile to ensure proper permissions for storage directory
- Configure storage to persist across container restarts
- Remove temporary image proxy controller approach

--- a/fly.toml
+++ b/fly.toml
@@ -21,6 +21,10 @@ primary_region = "syd"
   cpu_kind = "shared"
   cpus = 1
 
+[mounts]
+  source = "diary_storage"
+  destination = "/rails/storage"
+
 [[statics]]
   guest_path = "/rails/public"
   url_prefix = "/"
