--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,9 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+# Ignore gpt-pilot development files
+/gpt-pilot/
+
+# Ignore test and development specific files
+config/environments/test.rb
