--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,7 +72,11 @@ jobs:
         env:
           RAILS_ENV: test
           # REDIS_URL: redis://localhost:6379/0
-        run: bin/rails db:test:prepare test test:system
+        run: |
+          bin/rails db:test:prepare
+          if [ -d test ]; then
+            bin/rails test
+          fi
 
       - name: Keep screenshots from failed system tests
         uses: actions/upload-artifact@v4
