--- a/test/fixtures/events.yml
+++ b/test/fixtures/events.yml
@@ -3,11 +3,11 @@
 one:
   title: MyString
   description: MyText
-  event_date: 2025-09-16 09:20:12
+  start_time: 2025-09-16 09:20:12
   user: one
 
 two:
   title: MyString
   description: MyText
-  event_date: 2025-09-16 09:20:12
+  start_time: 2025-09-16 09:20:12
   user: two
