--- a/config/database.yml
+++ b/config/database.yml
@@ -20,6 +20,6 @@ test:
   port: 5432
 
 production:
-  adapter: postgresql
+  <<: *default
   url: <%= ENV['DATABASE_URL'] %>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
