--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,12 @@
 
+
 services:
   db:
     image: postgres:15
     environment:
       POSTGRES_DB: my_diary_production
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: peter284
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
@@ -23,13 +24,13 @@ services:
         condition: service_healthy
     environment:
       RAILS_ENV: production
-      DATABASE_URL: postgresql://postgres:peter284@db:5432/my_diary_production
-      RAILS_MASTER_KEY: ${RAILS_MASTER_KEY}
+      DATABASE_URL: "postgresql://postgres:${POSTGRES_PASSWORD}@db:5432/my_diary_production"
+      RAILS_MASTER_KEY: "${RAILS_MASTER_KEY}"
     ports:
-      - "3000:80"
+      - "3000:3000"
     volumes:
       - storage_data:/rails/storage
-    command: ["./bin/rails", "server", "-b", "0.0.0.0", "-p", "80"]
+    command: ["./bin/rails", "server", "-b", "0.0.0.0", "-p", "3000"]
 
 volumes:
   postgres_data:
