--- a/config/database.yml
+++ b/config/database.yml
@@ -21,4 +21,10 @@ test:
 
 production:
   <<: *default
-  url: <%= ENV['DATABASE_URL'] %>
+  adapter: postgresql
+  encoding: unicode
+  host: db
+  username: <%= ENV['POSTGRES_USER'] %>
+  password: <%= ENV['POSTGRES_PASSWORD'] %>
+  database: <%= ENV['POSTGRES_DB'] %>
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
