--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,41 +1,29 @@
 version: "3.9"
 
 services:
+  web:
+    build: .
+    command: bash -c "rm -f tmp/pids/server.pid && bin/rails server -b 0.0.0.0"
+    ports:
+      - "3000:3000"
+    environment:
+      RAILS_ENV: development
+      DATABASE_URL: postgres://postgres:postgres@db:5432/my_diary_development
+    volumes:
+      - .:/app
+    depends_on:
+      - db
+
   db:
     image: postgres:15
     environment:
-      POSTGRES_DB: my_diary_production
+      POSTGRES_DB: my_diary_development
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_PASSWORD: postgres
+    ports:
+      - "5433:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-
-  web:
-    build: .
-    depends_on:
-      db:
-        condition: service_healthy
-    environment:
-      RAILS_ENV: production
-      DATABASE_URL: "postgresql://postgres:${POSTGRES_PASSWORD}@db:5432/my_diary_production"
-      RAILS_MASTER_KEY: "${RAILS_MASTER_KEY}"
-    ports:
-      - "3000:3000"
-    volumes:
-      - storage_data:/rails/storage
-    command: >
-      bash -c "
-      bin/rails db:migrate &&
-      bin/rails server -b 0.0.0.0 -p 3000
-      "
 
 volumes:
   postgres_data:
-  storage_data:
